Update documentation, small fixes to variable namespacing

--- a/src/config/templates/neomutt/mbsyncrc.j2
+++ b/src/config/templates/neomutt/mbsyncrc.j2
@@ -1,6 +1,6 @@
 IMAPAccount mailbox
 Host imap.mailbox.org
-User {{ mail.primary }}
+User {{ config.mail.primary }}
 PassCmd "secret-tool lookup password mailbox"
 Port 993
 TLSType IMAPS
